--- a/translations/en.json
+++ b/translations/en.json
@@ -13,6 +13,7 @@
   "tickets": "Tickets",
   "toggle_details_notes": "Toggle Details and Notes",
   "toggle_organization": "Toggle organization",
+  "details_and_notes": "Details and Notes",
   "details": "Details",
   "notes": "Notes",
   "organization": "Organization",
