Implement admin + fields

--- a/translations/en.json
+++ b/translations/en.json
@@ -8,6 +8,10 @@
       }
     }
   },
+  "admin": {
+    "title": "User Info admin panel",
+    "text": "Please select the user fields you would like to permanently display on the App"
+  },
   "info": {
     "no_tags": "No tags",
     "no_domain_names": "No domain names"
@@ -20,6 +24,7 @@
   "details_and_notes": "Details and Notes",
   "details": "Details",
   "notes": "Notes",
+  "tags": "Tags",
   "organization": "Organization",
   "ticket_status": {
     "new": "n",
