--- a/translations/ja.json
+++ b/translations/ja.json
@@ -11,7 +11,8 @@
   "admin": {
     "title": "ユーザーデータ管理パネル",
     "save": "保存して戻る",
-    "text": "アプリに継続的に表示するユーザーフィールドを選択します"
+    "text": "アプリに継続的に表示するユーザーフィールドを選択します",
+    "include_org_fields": "組織情報を表示"
   },
   "info": {
     "no_tags": "タグなし",
