--- a/translations/ru.json
+++ b/translations/ru.json
@@ -11,7 +11,8 @@
   "admin": {
     "title": "Панель администрирования данных пользователя",
     "save": "Сохранить и вернуться",
-    "text": "Выберите поля пользователя, которые должны постоянно отображаться в приложении"
+    "text": "Выберите поля пользователя, которые должны постоянно отображаться в приложении",
+    "include_org_fields": "Отображение сведений об организации"
   },
   "info": {
     "no_tags": "Нет тегов",
