--- a/translations/es.json
+++ b/translations/es.json
@@ -11,7 +11,8 @@
   "admin": {
     "title": "Panel Administrador de Datos de usuario",
     "save": "Guardar y regresar",
-    "text": "Seleccione los campos de usuario que desee mostrar de forma permanente en la aplicación"
+    "text": "Seleccione los campos de usuario que desee mostrar de forma permanente en la aplicación",
+    "include_org_fields": "Mostrar información de la organización"
   },
   "info": {
     "no_tags": "No hay etiquetas",
