--- a/translations/no.json
+++ b/translations/no.json
@@ -11,7 +11,8 @@
   "admin": {
     "title": "Panelet Brugerdataadmin",
     "save": "Gem og gå tilbage",
-    "text": "Vælg de brugerfelter, du ønsker at vise permanent i app’en"
+    "text": "Vælg de brugerfelter, du ønsker at vise permanent i app’en",
+    "include_org_fields": "Vis oplysninger om organisationen"
   },
   "info": {
     "no_tags": "Ingen tags",
