--- a/translations/uk.json
+++ b/translations/uk.json
@@ -11,7 +11,8 @@
   "admin": {
     "title": "User Data Admin panel",
     "save": "Save and go back",
-    "text": "Please select the user fields you would like to permanently display on the App"
+    "text": "Please select the user fields you would like to permanently display on the App",
+    "include_org_fields": "Display organization information"
   },
   "info": {
     "no_tags": "No tags",
