--- a/translations/zh-cn.json
+++ b/translations/zh-cn.json
@@ -11,7 +11,8 @@
   "admin": {
     "title": "用户数据管理员面板",
     "save": "保存并返回",
-    "text": "请选择您要在 App 上永久显示的用户字段"
+    "text": "请选择您要在 App 上永久显示的用户字段",
+    "include_org_fields": "显示组织信息"
   },
   "info": {
     "no_tags": "没有标签",
