--- a/translations/zh-tw.json
+++ b/translations/zh-tw.json
@@ -11,7 +11,8 @@
   "admin": {
     "title": "使用者資料管理員儀表板",
     "save": "儲存並返回",
-    "text": "請選取您要永久顯示在 App 上的使用者欄位"
+    "text": "請選取您要永久顯示在 App 上的使用者欄位",
+    "include_org_fields": "Vis oplysninger om organisationen"
   },
   "info": {
     "no_tags": "無標籤",
