--- a/translations/zh-tw.json
+++ b/translations/zh-tw.json
@@ -12,7 +12,7 @@
     "title": "使用者資料管理員儀表板",
     "save": "儲存並返回",
     "text": "請選取您要永久顯示在 App 上的使用者欄位",
-    "include_org_fields": "Vis oplysninger om organisationen"
+    "include_org_fields": "顯示組織資訊"
   },
   "info": {
     "no_tags": "無標籤",
