--- a/translations/en.yml
+++ b/translations/en.yml
@@ -44,7 +44,7 @@ parts:
   - translation:
       key: "txt.apps.user_data_app.update_user_done"
       title: "Growl notification to advise the admin the notes and details have been udpated"
-      value: "User notes and details updated!"
+      value: "User notes and details updated."
   - translation:
       key: "txt.apps.user_data_app.ajax_error"
       title: "Error message notification"
