--- a/translations/en.json
+++ b/translations/en.json
@@ -46,9 +46,13 @@
       "value": "No domain names"
     }
   },
+  "update_organization_done": {
+    "title": "Growl notification to advise the admin the notes and details have been updated",
+    "value": "Organization notes and details updated."
+  },
   "update_user_done": {
-    "title": "Growl notification to advise the admin the notes and details have been udpated",
-    "value": "User notes and details updated!"
+    "title": "Growl notification to advise the admin the notes and details have been updated",
+    "value": "User notes and details updated."
   },
   "ajax_error": {
     "title": "Error message notification",
