--- a/translations/en.json
+++ b/translations/en.json
@@ -48,7 +48,7 @@
   },
   "update_organization_done": {
     "title": "Growl notification to advise the admin the notes and details have been updated",
-    "value": "Organization notes and details updated."
+    "value": "Organization notes and details updated"
   },
   "update_user_done": {
     "title": "Growl notification to advise the admin the notes and details have been updated",
